--- a/app/src/main/res/layout/fragment_student_list.xml
+++ b/app/src/main/res/layout/fragment_student_list.xml
@@ -7,10 +7,10 @@
     >
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.StudentListFragment"
-        >
+        tools:context=".view.StudentListFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
